Fix duplicate semicolon in gap property in _base.scss

--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -15,7 +15,7 @@ body {
   justify-content  : center;
   align-items      : center;
   padding          : var(--clamp-spacing-y) var(--clamp-spacing-x);
-  gap              : var(--spacing-100);;
+  gap              : var(--spacing-100);
   margin           : 0 auto;
   }
 
